demos/cafe-app/cafe-ingress-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:  
    kubernetes.io/ingress.class: "nsx"
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service: 
            name: tea-svc
            port: 
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service: 
            name: coffee-svc
            port: 
              number: 80
